// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateExam() creates a basic exam when called with minimal arguments 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<e:exam xmlns="http://www.w3.org/1999/xhtml" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:e="http://ylioppilastutkinto.fi/exam.xsd" xsi:schemaLocation="http://ylioppilastutkinto.fi/exam.xsd https://abitti.net/schema/exam.xsd" exam-schema-version="0.5">
    <e:exam-versions>
        <e:exam-version lang="fi-FI"/>
    </e:exam-versions>
    <e:exam-title>Kokeen otsikko</e:exam-title>
    <e:section>
        <e:section-title>Osan otsikko</e:section-title>
        <e:question>
            <e:question-title>Kysymyksen otsikko</e:question-title>
            <e:text-answer max-score="6" type="rich-text"/>
        </e:question>
    </e:section>
</e:exam>

`;

exports[`generateExam() localizes titles if multi-language exam 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<e:exam xmlns="http://www.w3.org/1999/xhtml" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:e="http://ylioppilastutkinto.fi/exam.xsd" xsi:schemaLocation="http://ylioppilastutkinto.fi/exam.xsd https://abitti.net/schema/exam.xsd" exam-schema-version="0.5">
    <e:exam-versions>
        <e:exam-version lang="fi-FI"/>
        <e:exam-version lang="sv-FI"/>
    </e:exam-versions>
    <e:exam-title>
        <e:localization lang="fi-FI">Kokeen otsikko</e:localization>
        <e:localization lang="sv-FI">Provets titel</e:localization>
    </e:exam-title>
    <e:section>
        <e:section-title>
            <e:localization lang="fi-FI">Osan otsikko</e:localization>
            <e:localization lang="sv-FI">Delens titel</e:localization>
        </e:section-title>
        <e:question>
            <e:question-title>
                <e:localization lang="fi-FI">Kysymyksen otsikko</e:localization>
                <e:localization lang="sv-FI">Uppgiftens titel</e:localization>
            </e:question-title>
            <e:text-answer max-score="6" type="rich-text"/>
        </e:question>
    </e:section>
</e:exam>

`;
